--- a/app/src/main/res/layout/weather_fragment.xml
+++ b/app/src/main/res/layout/weather_fragment.xml
@@ -14,9 +14,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvWeather"
+            style="@style/styTxtList"
+            android:layout_marginTop="3dp"
+            android:textSize="11sp"
+            android:gravity="center"
+            android:text="Rain"
+            app:layout_constraintStart_toStartOf="@id/imgWeatherIcon"
+            app:layout_constraintEnd_toEndOf="@id/imgWeatherIcon"
+            app:layout_constraintTop_toTopOf="@id/imgWeatherIcon" />
+
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvDate"
+            android:id="@+id/tvTemprature"
             style="@style/styTxtList"
             android:layout_marginStart="8dp"
             android:text="@string/app_name"
@@ -34,7 +45,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvTemprature"
+            android:id="@+id/tvDate"
             style="@style/styTxtList"
             android:layout_marginStart="8dp"
             android:text="@string/app_name"
